force-app/main/default/objects/Touchpoint_Surveys__c/Touchpoint_Surveys__c.object-meta.xml
<CustomObject>
    <label>Touchpoint Surveys</label>
    <nameField>
        <label>Touchpoint Surveys</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Touchpoint Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>