force-app/main/default/objects/Touchpoint_Surveys__c/fields/Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Name__c</fullName>
    <label>Customer Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>