force-app/main/default/objects/Touchpoint_Surveys__c/fields/Duration_in_seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_seconds__c</fullName>
    <label>Duration (in seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>