force-app/main/default/objects/Touchpoint_Surveys__c/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <label>Finished</label>
    <length>10</length>
    <type>Text</type>
</CustomField>