force-app/main/default/objects/Touchpoint_Surveys__c/fields/NPS2_Group__c.field-meta.xml
<CustomField>
    <fullName>NPS2_Group__c</fullName>
    <label>NPS2-Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>