force-app/main/default/objects/Touchpoint_Surveys__c/fields/NPS_Group__c.field-meta.xml
<CustomField>
    <fullName>NPS_Group__c</fullName>
    <label>NPS - Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>