force-app/main/default/objects/Touchpoint_Surveys__c/fields/Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience__c</fullName>
    <label>Overall Experience</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>