force-app/main/default/objects/Touchpoint_Surveys__c/fields/Recipient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Last_Name__c</fullName>
    <label>Recipient Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>