force-app/main/default/objects/Touchpoint_Surveys__c/fields/Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Response_ID__c</fullName>
    <label>Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>