force-app/main/default/objects/Touchpoint_Surveys__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>30</length>
    <type>Text</type>
</CustomField>